Wire os.name dispatch into EmbedHost.create for a Win32 backend
EmbedHostWin32 does the host side of what the real-machine spike
confirmed: SetParent+style-flip+poll-verify onto the host Canvas's own
HWND, host-initiated to stay symmetric with the X11 side (spike
question 1), and client death detection via ProcessHandle.onExit()
(confirmed reliable for a foreign pid, spike question 3) instead of a
hand-rolled Kernel32 watcher.

embed(long)/embed(Path)/embedOpaque(long) all collapse into the same
SetParent+poll-verify operation on this backend, since Win32 has no
_XEMBED_INFO equivalent to make them differ - documented on EmbedHost
itself now that a second backend exists to make the distinction
visible.

Win32WindowFinder.pidOfWindow is new, needed to recover a pid from a
bare window id for embedOpaque's death-watch.