@@ -1,33 +1,54 @@
 package cz.loplex.xembed.host;
 
+import cz.loplex.xembed.common.Platform;
+
 import java.awt.Canvas;
 import java.nio.file.Path;
 
 /**
- * Simplified 1:1 host-side facade over {@link EmbedSocket}, for the common
- * case of a host embedding exactly one client for the lifetime of a single
- * child process — e.g. a JVM the host spawns itself and reparents into a
- * placeholder {@link Canvas} in its own UI. Composed entirely from {@link
- * EmbedSocket}; nothing here re-implements X11 handling of its own.
+ * Simplified 1:1 host-side facade dispatched by {@code os.name} to either an
+ * X11 backend ({@link EmbedHostX11}, over {@link EmbedSocket}) or a Win32
+ * backend ({@link EmbedHostWin32}, over {@code xembed-core-win32}'s {@code
+ * SetParent} wrapper), for the common case of a host embedding exactly one
+ * client for the lifetime of a single child process — e.g. a JVM the host
+ * spawns itself and reparents into a placeholder {@link Canvas} in its own
+ * UI.
  *
  * <p>Deliberately narrower than {@code EmbedSocket}: no multi-client re-use
  * of one socket ({@link EmbedSocket#listen} keeps accepting new clients
  * after a detach), no voluntary host-initiated {@link
  * EmbedSocket#detachClient() detach}, no focus-next/focus-prev tab-cycling
  * callbacks, and no modality signaling. Reach for {@link EmbedSocket}
- * directly when any of those are needed.
+ * directly when any of those are needed — {@code EmbedSocket} has no Win32
+ * equivalent yet.
+ *
+ * <p><b>{@link #embedOpaque} and {@link #embed(long)} are the same operation
+ * on the Win32 backend.</b> X11 has a real distinction: {@link #embed(long)}
+ * relies on the client having published {@code _XEMBED_INFO} itself, while
+ * {@link #embedOpaque} writes it on the client's behalf and confirms the
+ * reparent by polling instead of trusting a handshake. Win32 has no {@code
+ * _XEMBED_INFO} equivalent at all — {@code SetParent} is the whole
+ * operation regardless of which method is called — so both do the exact
+ * same poll-verified {@code SetParent} there. Confirmed by a real-machine
+ * spike; see {@code xembed-core-win32}'s package-info.
  */
 public interface EmbedHost extends AutoCloseable {
 
     /**
      * Creates a host bound to {@code hostCanvas}, the placeholder the
-     * embedded client's window will become a genuine X11 child of — see
-     * {@link EmbedSocket#open(Canvas)}. {@code hostCanvas} must already be
-     * part of a {@link java.awt.Frame}/{@link javax.swing.JFrame}'s
-     * component tree (it doesn't need to be visible yet).
+     * embedded client's window will become a genuine child of — a real X11
+     * child (see {@link EmbedSocket#open(Canvas)}) or a Win32 {@code
+     * SetParent} child, depending on {@code os.name}. {@code hostCanvas}
+     * must already be part of a {@link java.awt.Frame}/{@link
+     * javax.swing.JFrame}'s component tree (it doesn't need to be visible
+     * yet) — on Windows, it must additionally already be displayable, since
+     * extracting its HWND requires a real peer (see {@code
+     * CanvasNativeHandle}, which also requires this JVM to be started with
+     * {@code --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens
+     * java.desktop/sun.awt.windows=ALL-UNNAMED}).
      */
     static EmbedHost create(Canvas hostCanvas) {
-        return new EmbedHostX11(hostCanvas);
+        return Platform.isWindows() ? new EmbedHostWin32(hostCanvas) : new EmbedHostX11(hostCanvas);
     }
 
     /**
@@ -65,7 +86,11 @@ public interface EmbedHost extends AutoCloseable {
      */
     void requestFocus();
 
-    /** Releases the underlying {@link EmbedSocket} and its X11 window. */
+    /**
+     * Releases this host's resources — the underlying {@link EmbedSocket}
+     * and its X11 window on the X11 backend; nothing OS-level on the Win32
+     * backend, which has no separate socket window of its own.
+     */
     @Override
     void close();
 }
